--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:senha@localhost:5432/Blog"
+JWT_SECRET="thisismysecrtofmyjwt"
